# BUPT-Projects-Public

./: .gitignore  .gitmodules  README.md
CFG_transfer/: README.md  in  out
CFG_transfer/code/: Makefile  main.cpp
CFG_transfer/doc/: assignment.md  report.md
DS-curriculum-design/code/: main.cpp
DS-curriculum-design/code/activity/: activity.h
DS-curriculum-design/code/activity/event/: alarm.cpp  alarm.h  exam.cpp  exam.h  move.cpp  outdoors.h
DS-curriculum-design/code/gui/: button.cpp  gui.cpp  gui.h  menu.cpp  menu.h  text.h
DS-curriculum-design/code/gui/activity_gui/: activity_gui.h
DS-curriculum-design/code/gui/residant/: bird.cpp  bird.h  digit_clock.h
DS-curriculum-design/code/map/: map.cpp  map.h
DS-curriculum-design/code/timetable/: timetable.h
DS-curriculum-design/code/view/: view.cpp  view.h
DS-curriculum-design/resource/: res.qrc
cp_analysis/: README.md
cp_analysis/lexical_analysis/: .gitignore  CMakeLists.txt  README.md
cp_analysis/lexical_analysis/handin/: report.md
cp_analysis/lexical_analysis/src/: main.cpp  parse.cpp  reader.cpp
cp_analysis/lexical_analysis/src/include/: defs.h  parse.h  reader.h
cp_analysis/lexical_analysis/test/: another_test.cc  hello_test.cc
cp_analysis/lexical_analysis/test/input/: simple.c  simple.c.output.txt  simple_good.c
cp_analysis/syntactic analysis/: .gitignore  README.md  go.sum  main.go
cp_analysis/syntactic analysis/ll1/: analysis.go  predTable.go
cp_analysis/syntactic analysis/lr/: actionTable.go  analysis.go
cp_analysis/syntactic analysis/util/: first.go  follow.go  types.go
datalink/: GBN.c  GBN.h  Makefile  README.md  SR.c  SR.h  datalink.bac.c  datalink.bac.h  lprintf.h
datalink/doc/: 实验报告封面打印.doc  性能测试记录表-参考数据.docx  性能测试记录表.docx  讲义ch3-Lab.pptx
dnsrelay/: .gitignore  README.md
dnsrelay/code/: Makefile  cache.c  cache.h  debug.c  debug.h  defs.h  dnsrelay  dnsrelay.txt  list.h  main.c  relay2.txt  table.c  table.h  trans.c  trans.h
dnsrelay/doc/: 计算机网络课程设计.pptx  课程设计报告封面.doc
dnsrelay/doc/参考资料/: RFC1035.doc  dns1.pcapng  dnsmasq.7z
enc/: README.md  client.py  server.py
express_manager/: README.md
express_manager/doc/: 实验(综合-物流管理平台设计)-面向对象程序设计与实践-2022春 发布版v3.docx
express_manager/handin/: report.md
express_manager/task1/: account.cpp  account.h  admin.cpp  cmd.cpp  cmd.h  defs.h  express.cpp  express.h  main.cpp  task1  tool_lib.cpp  tool_lib.h  user.cpp
express_manager/task1/express/: 7e651315227  7e6513152b36  7e651316231a  7e65131624d  7e651316426  7e651316630  7e6517a1a11  7e651ba03  7e66896b
express_manager/task1/user/: a  admin  asd  gaomez  testuser  tuser  x  xxx
express_manager/task2/: account.h  admin.cpp  average.cpp  fragile.cpp  fragile.h  task2  tool_lib.cpp  tool_lib.h
express_manager/task2/express/: 7e651bb2335  7e668ad2d
express_manager/task2/user/: cor  cou2
express_manager/task3/: c  client.cpp  s  server.cpp
express_manager/task3/base/: account.cpp  admin.h  average.h  book.cpp  book.h  cmd.cpp  cmd.h  courier.cpp  courier.h  defs.h  express.cpp  express.h  main.cpp  user.cpp  user.h
express_manager/task3/base/user/: admin  exp  gaomez  tuser
python_crawler_final/: .gitignore  README.md  analysis.py
python_crawler_final/lianjia/lianjia/: items.py  pipelines.py  settings.py
student_assistant/: CMakeLists.txt  README.md
student_assistant/code/: primary.cpp  primary.h  tool_lib.cpp  tool_lib.h
student_assistant/code/activity/: activity.cpp
student_assistant/code/activity/event/: event.cpp  event.h  lesson.cpp  lesson.h  move.h  outdoors.cpp
student_assistant/code/gui/: button.h  text.cpp
student_assistant/code/gui/activity_gui/: activity_gui.cpp
student_assistant/code/gui/map_gui/: map_gui.cpp  map_gui.h
student_assistant/code/gui/residant/: digit_clock.cpp  time_controller.cpp  time_controller.h
student_assistant/code/gui/residant/shell/: shell.cpp  shell.h
student_assistant/code/gui/table_gui/: table_gui.cpp  table_gui.h
student_assistant/code/map/: path.cpp  path.h
student_assistant/code/map/building/: building.cpp  building.h
student_assistant/code/saves/assignments/计算机网络/: assign2.txt
student_assistant/code/timetable/: timetable.cpp
(+4 files in other folders)
